src/styles/partials/_map-results.scss
@use "./variables" as *;

.leaflet-container {
  height: 400px;
  margin-block: 25px;
  margin-bottom: 0px;
  color: $black;
  border-radius: 0px;
  border-top-left-radius: 5px;
}

.results-map-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  flex-wrap: nowrap;
  gap: 20px;

  @media (max-width: $mq-medium) {
    flex-direction: column-reverse;
    align-items: center;
    gap: 0px;
  }
}

.results-view {
  flex-basis: calc(35% - 10px);
  position: relative;

  @media (max-width: $mq-medium) {
    width: 100%;
    flex-basis: 50%;
  }
}

.results {
  height: 400px;
  font-family: $body-font;
  font-size: 0.8rem;
  color: black;
  border: 5px solid $light-green;
  border-radius: 5px;
  border-top-right-radius: 0px;
  background-color: $bg-color;
  background: rgba($light-green, 0.1);
  overflow-x: hidden;
  max-height: 400px;

  p {
    font-size: 1.1rem;
  }

  select {
    appearance: none;
    width: 100%;
    height: 100%;
    margin: 0px;
  }

  option {
    padding-top: 5px;
    padding-bottom: 5px;
    display: flex;
    align-items: center;

    &:hover,
    &:focus {
      background-color: rgba($coral-pink, 0.8);
    }

    &:checked {
      width: 100%;
      background-color: rgba($aqua-blue, 0.8);
    }
    &:nth-child(even) {
      background-color: lightgray;
      &:hover,
      &:focus {
        background-color: rgba($coral-pink, 0.9);
      }
    }
  }

  .result-middle {
    background-image: url($middle-icon-url);
    background-repeat: no-repeat;
    background-position: 3px 50%;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 35px;
    // margin-left: 5px;
  }

  @media (max-width: $mq-medium) {
    width: 100%;
    height: 400px;
    font-size: 1.2rem;
  }

  @media (max-width: $mq-small) {
    font-size: 0.9rem;
  }

  @media (max-width: $mq-big-mobile) {
    font-size: 0.75rem;
  }
}

.results-error {
  padding: 20px;
}

.map-view {
  flex-basis: calc(65% - 10px);
  position: relative;

  .directions-button,
  .fav-button,
  .leaflet-control-zoom a,
  .leaflet-routing-container {
    border: 1px solid $light-green;
    transition: 0.1s ease-in;

    &:hover,
    &:focus {
      background-color: rgba($light-green, 0.9);
    }
  }

  .directions-button,
  .fav-button {
    border-radius: 5px;
    margin-right: 10px;
    margin-top: 2px;
    margin-bottom: 2px;
  }

  .fav-div {
    margin-top: 5px;
    margin-bottom: 0px;
  }

  .fav-count {
    display: inline-block;
    text-align: center;
    padding-top: 2px;
    border-radius: 50%;
    width: 35px;
    height: 25px;
    background-color: rgba($aqua-blue, 0.5);
  }

  @media (max-width: $mq-medium) {
    width: 100%;
    height: 400px;
    flex-basis: 50%;
  }
}

.map-view-button,
.fav-tab {
  color: $black;
  text-align: center;
  position: absolute;
  top: 30px;
  right: 0px;
  width: 200px;
  height: 40px;
  background-color: $light-green;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  margin-top: 15px;
  border: 5px solid rgba($white, 0.3);
  transition: 0.1s ease-in;
  cursor: pointer;

  &:hover,
  &:focus {
    background-color: rgba($light-green, 0.7);
  }

  @media (max-width: $mq-small) {
    width: 150px;
    top: 18px;
  }

  @media (max-width: $mq-big-mobile) {
    font-size: 0.9rem;
    width: 120px;
  }

  @media (max-width: $mq-mobile) {
    font-size: 0.75rem;
    width: 100px;
  }
}

.map-view-button {
  right: 205px;

  @media (max-width: $mq-small) {
    right: 152px;
  }

  @media (max-width: $mq-big-mobile) {
    right: 122px;
  }

  @media (max-width: $mq-mobile) {
    right: 102px;
  }
}

